[gd_scene load_steps=29 format=3 uid="uid://co0mmxjfr6oig"]

[ext_resource type="Script" path="res://scenes/game_object/enemies/farm_enemies/chicken_farm_enemy/tough_chicken_enemy.gd" id="1_ownun"]
[ext_resource type="PackedScene" uid="uid://br47oe6cdcp4h" path="res://scenes/component/random_stream_player_2d_component.tscn" id="2_5ntoo"]
[ext_resource type="AudioStream" uid="uid://dv2j0eoxxdl5l" path="res://assets/audio/sfx/footstep_carpet_000.ogg" id="3_qvxfa"]
[ext_resource type="AudioStream" uid="uid://b7jevwof7y23c" path="res://assets/audio/sfx/footstep_carpet_001.ogg" id="4_ms6sk"]
[ext_resource type="AudioStream" uid="uid://c2tvbvycrcy8v" path="res://assets/audio/sfx/footstep_carpet_002.ogg" id="5_bjma1"]
[ext_resource type="AudioStream" uid="uid://cfa3vwlwibsog" path="res://assets/audio/sfx/footstep_carpet_003.ogg" id="6_6ajde"]
[ext_resource type="AudioStream" uid="uid://cf3t6u6466igk" path="res://assets/audio/sfx/footstep_carpet_004.ogg" id="7_ppgpo"]
[ext_resource type="PackedScene" uid="uid://bqynfy3wngpy7" path="res://scenes/component/vial_drop_component.tscn" id="8_bkbww"]
[ext_resource type="PackedScene" uid="uid://bb6rqm5ox8wsu" path="res://scenes/game_object/experience_vial/big_vial.tscn" id="9_d7e22"]
[ext_resource type="PackedScene" uid="uid://cl21hasx1ekjd" path="res://scenes/component/health_component.tscn" id="9_iba0r"]
[ext_resource type="PackedScene" uid="uid://b15860rxkv1a1" path="res://scenes/component/velocity_component.tscn" id="10_t3ivs"]
[ext_resource type="PackedScene" uid="uid://dwhwp00bq1je6" path="res://scenes/component/hitflash_component.tscn" id="11_57air"]
[ext_resource type="Shader" path="res://scenes/component/hitflash_component.gdshader" id="12_dcspg"]
[ext_resource type="PackedScene" uid="uid://cfqv7qt4x3y3i" path="res://scenes/component/death_component.tscn" id="13_3jdi0"]
[ext_resource type="PackedScene" uid="uid://cn80dr6eyu445" path="res://scenes/component/death_sfx_player.tscn" id="14_a6rvh"]
[ext_resource type="AudioStream" uid="uid://cnilnoj6vqle3" path="res://scenes/game_object/enemies/office_enemies/office_chicken_enemy/chicken1.mp3" id="15_x07s7"]
[ext_resource type="AudioStream" uid="uid://ddm8whyh6y7ox" path="res://scenes/game_object/enemies/farm_enemies/chicken_farm_enemy/chicken2.mp3" id="16_2o1gx"]
[ext_resource type="PackedScene" uid="uid://sl3i0hvqi3av" path="res://scenes/component/hurtbox_component.tscn" id="17_dp155"]
[ext_resource type="Texture2D" uid="uid://ds4m7v1pqfid0" path="res://scenes/game_object/enemies/office_enemies/office_chicken_enemy/chick2.png" id="18_libyw"]
[ext_resource type="PackedScene" uid="uid://ds1jpmcwff24x" path="res://scenes/component/enemy_shadow.tscn" id="20_0ycbu"]

[sub_resource type="Animation" id="Animation_ihajb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.8, 0.372549, 0.278431, 1)]
}

[sub_resource type="Animation" id="Animation_fjdpl"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.261799, -0.174533, 0.174533, -0.174533]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 3.13834, 1),
"update": 0,
"values": [Color(0.8, 0.372549, 0.278431, 1), Color(0.586314, 0.246796, 0.172762, 1), Color(0.8, 0.372549, 0.278431, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqgq1"]
_data = {
"RESET": SubResource("Animation_ihajb"),
"walk": SubResource("Animation_fjdpl")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11yjx"]
resource_local_to_scene = true
shader = ExtResource("12_dcspg")
shader_parameter/lerp_percent = 0.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_7lpci"]
playback_mode = 1
random_pitch = 1.1
streams_count = 2
stream_0/stream = ExtResource("15_x07s7")
stream_0/weight = 0.1
stream_1/stream = ExtResource("16_2o1gx")

[sub_resource type="CircleShape2D" id="CircleShape2D_dltyd"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5bdn7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6yu18"]
radius = 5.0

[node name="ToughChickenEnemy" type="CharacterBody2D" groups=["enemy", "entities_layer"]]
collision_layer = 8
collision_mask = 9
motion_mode = 1
script = ExtResource("1_ownun")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rqgq1")
}
autoplay = "walk"

[node name="HitRandomAudioPlayer2DComponent" parent="." instance=ExtResource("2_5ntoo")]
max_distance = 300.0
streams = Array[AudioStream]([ExtResource("3_qvxfa"), ExtResource("4_ms6sk"), ExtResource("5_bjma1"), ExtResource("6_6ajde"), ExtResource("7_ppgpo")])

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 60.0
autostart = true

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("8_bkbww")]
vial_scene = ExtResource("9_d7e22")
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("9_iba0r")]
max_health = 8.0

[node name="VelocityComponent" parent="." instance=ExtResource("10_t3ivs")]
max_speed = 68
acceleration = 3.0

[node name="HitflashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("11_57air")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_11yjx")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("13_3jdi0")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="DeathSFXPlayer" parent="DeathComponent" instance=ExtResource("14_a6rvh")]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_7lpci")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("17_dp155")]
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_dltyd")

[node name="Visuals" type="Node2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.8, 0.372549, 0.278431, 1)
material = SubResource("CanvasItemMaterial_5bdn7")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
use_parent_material = true
scale = Vector2(1.6, 1.6)
texture = ExtResource("18_libyw")
offset = Vector2(0, -6)
region_rect = Rect2(5.305, 0, 0, 0)

[node name="EnemyShadow" parent="Visuals/Sprite2D" instance=ExtResource("20_0ycbu")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_6yu18")
